# product-image-agent-kit

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: HUMAN_CHANGELOG.md  architecture.md  launch-posts.md  project-introduction.zh-CN.md  star-launch-plan.md
examples/: README.md  products.csv  products.json
examples/templates/: amazon-image-package.csv  shopify-products.csv
src/product_image_agent/: __init__.py  cli.py  generator.py  models.py  pipeline.py  planner.py  providers.py  qa.py  report.py  scanner.py  screenshot.py
tests/: test_pipeline.py
