[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-image-agent-kit"
version = "0.2.0"
description = "Local-first AI product image workflow toolkit with mock generation, QA reports, and approval gates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Product Image Agent Kit maintainers" }]
keywords = ["ai-agents", "ecommerce", "image-generation", "workflow-automation", "product-images"]
dependencies = []

[project.scripts]
product-image-agent = "product_image_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
